--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
+gradle-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -26,3 +27,4 @@ hs_err_pid*
 
 # Ignore Gradle build output directory
 build
+/gradle/wrapper/gradle-wrapper.properties
